[package]
name = "spikard-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance HTTP server for Spikard with tower-http middleware stack"
keywords = ["http", "server", "axum", "tower", "middleware"]
categories = ["web-programming::http-server", "web-programming"]
documentation = "https://docs.rs/spikard-http"
readme = "README.md"

[package.metadata.cargo-machete]
ignored = [
    "anyhow",
    "h2",
    "http-body",
    "jiff",
    "prost",
    "prost-types",
    "tokio-stream",
    "utoipa-redoc",
    "utoipa-swagger-ui",
]

[features]
default = []
di = ["spikard-core/di"]
# Marker feature: actual gating is by target_arch = "wasm32" in source.
# Declare this feature so spikard-wasm and CI can use --features wasm as the
# documented entry-point for the wasm32-unknown-unknown build.
wasm = []

# native: full axum + full tokio + all server-side deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { workspace = true, features = ["multipart", "ws"] }
axum-test = { version = "20", features = ["ws"] }
h2 = "0.4"
jiff = "0.2"
prost = "0.14"
prost-types = "0.14"
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.14", features = ["transport", "codegen", "gzip"] }
tower-http = { workspace = true }
tower_governor = { workspace = true }
tracing-subscriber.workspace = true
tungstenite = "0.29"

# wasm: narrow axum (no `tokio` feature → no tokio/net → no mio)
# Explicitly list every axum feature we need on wasm; skip `tokio` which enables tokio/net.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { version = "0.8", default-features = false, features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "multipart",
    "original-uri",
    "query",
    "tower-log",
    "tracing",
] }
# getrandom requires the "wasm_js" feature on wasm32-unknown-unknown to use the Web Crypto API
getrandom = { version = "0.4", features = ["wasm_js"] }
# tokio narrow subset (no net/fs/process/signal/rt-multi-thread)
# Cannot use workspace = true here because workspace pins features = ["full"]
# and Cargo does not allow overriding default-features via workspace inheritance.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }

[dependencies]
ahash = "0.8"
anyhow = "1.0"
asyncapiv3 = "0.1.3"
brotli = "8.0"
bytes = "1.11"
cookie = "0.18"
flate2.workspace = true
futures = "0.3"
futures-util = "0.3"
http-body = "1.0"
http-body-util = "0.1"
jsonschema.workspace = true
jsonwebtoken.workspace = true
lazy_static = "1.5"
lru = "0.18"
mime = "0.3"
regex = "1"
rustc-hash = "2.1"
serde.workspace = true
serde_json.workspace = true
serde_qs = "1.1"
spikard-core.workspace = true
tower.workspace = true
tracing.workspace = true
url = "2.5"
urlencoding = "2.1"
utoipa.workspace = true
utoipa-redoc.workspace = true
utoipa-swagger-ui.workspace = true
uuid = "1.23"

[dev-dependencies]
chrono = "0.4"
doc-comment = "0.3"
tempfile = "3.27"

[lints]
workspace = true
