[package]
name = "spikard-node"
version = "0.14.0"
edition = "2024"
license = "MIT"
description = "Rust-centric multi-language HTTP framework with polyglot bindings"
readme = false
keywords = ["http", "web", "framework", "polyglot", "rust"]
categories = ["text-processing"]

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. List it here so `cargo machete` doesn't flag the
# no-json case as a real finding.
[package.metadata.cargo-machete]
ignored = ["serde_json"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
spikard = { path = "../spikard", features = ["di"] }
spikard-core = { path = "../spikard-core" }
spikard-graphql = { path = "../spikard-graphql" }
spikard-http = { path = "../spikard-http" }
tokio = { features = ["full"], version = "1" }

[build-dependencies]
napi-build = "2"
