[package]
name = "spikard-node"
version = "0.15.6-rc.8"
edition = "2024"
license = "MIT"
description = "Rust-centric multi-language HTTP framework with polyglot bindings"
readme = false
keywords = ["framework", "http", "polyglot", "rust", "web"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
spikard = { version = "0.15.6-rc.8", path = "../spikard", features = ["di"] }
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
spikard-core = { path = "../spikard-core", version = "0.15.6-rc.8" }
spikard-graphql = { path = "../spikard-graphql", version = "0.15.6-rc.8" }
spikard-http = { path = "../spikard-http", version = "0.15.6-rc.8" }
tokio = { features = ["full"], version = "1" }

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming
# adapters configured but no actual async-trait callsite in this binding.
[package.metadata.cargo-machete]
ignored = ["serde_json"]

[build-dependencies]
napi-build = "2"
