[package]
name = "spikard-node"
version = "0.15.6-rc.9"
edition = "2024"
license = "MIT"
description = "Rust-centric multi-language HTTP framework with polyglot bindings"
readme = false
keywords = ["framework", "http", "polyglot", "rust", "web"]
categories = ["text-processing"]

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming
# adapters configured but no actual async-trait callsite in this binding.
[package.metadata.cargo-machete]
ignored = ["serde_json"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
spikard = { version = "0.15.6-rc.9", path = "../spikard", features = ["di"] }
spikard-core = { path = "../spikard-core", version = "0.15.6-rc.9" }
spikard-graphql = { path = "../spikard-graphql", version = "0.15.6-rc.9" }
spikard-http = { path = "../spikard-http", version = "0.15.6-rc.9" }
tokio = { features = ["full"], version = "1" }

[build-dependencies]
napi-build = "2"
