[package]
name = "spikard-php"
version = "0.17.0-rc.4"
edition = "2024"
license = "MIT"
description = "Rust-centric multi-language HTTP framework with polyglot bindings"
readme = false
keywords = ["framework", "http", "polyglot", "rust", "web"]
categories = []

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []
default = ["di"]
di = ["spikard/di"]

[dependencies]
axum = { default-features = false, version = "0.8" }
ext-php-rs = "0.15.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spikard = { version = "0.17.0-rc.4", path = "../spikard", features = ["di"] }
spikard-core = { path = "../spikard-core", version = "0.17.0-rc.4" }
spikard-graphql = { path = "../spikard-graphql", version = "0.17.0-rc.4" }
spikard-http = { path = "../spikard-http", version = "0.17.0-rc.4" }
tokio = { version = "1", features = ["full"] }
