[package]
name = "spikard-py"
version = "0.14.0"
edition = "2024"
license = "MIT"
description = "Rust-centric multi-language HTTP framework with polyglot bindings"
readme = false
keywords = ["http", "web", "framework", "polyglot", "rust"]
categories = ["text-processing"]

# `pyo3-async-runtimes` and `serde_json` are emitted unconditionally above so
# the manifest is stable across regens, but for umbrella crates with no
# async fns or no JSON-marshalled return types they are genuinely unused.
# List them here so `cargo machete` doesn't flag the no-async-no-json case
# as a real finding.
[package.metadata.cargo-machete]
ignored = ["pyo3-async-runtimes", "serde_json"]

[lib]
name = "_spikard"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[dependencies]
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spikard = { path = "../spikard", features = ["di"] }
spikard-core = { path = "../spikard-core" }
spikard-graphql = { path = "../spikard-graphql" }
spikard-http = { path = "../spikard-http" }
tokio = { features = ["full"], version = "1" }
