[package]
name = "spikard-py"
version = "0.17.0-rc.4"
edition = "2024"
license = "MIT"
description = "Rust-centric multi-language HTTP framework with polyglot bindings"
readme = false
keywords = ["framework", "http", "polyglot", "rust", "web"]
categories = []

# `pyo3-async-runtimes` and `serde_json` are emitted unconditionally above so
# the manifest is stable across regens, but for umbrella crates with no
# async fns or no JSON-marshalled return types they are genuinely unused.
# The conditional `async-trait` / `tokio` / `futures` deps are similarly
# flagged when the umbrella has trait-bridge / streaming adapters configured
# but no actual async-trait / async callsite in the generated PyO3 shim.
[package.metadata.cargo-machete]
ignored = ["pyo3-async-runtimes", "serde_json"]

[lib]
name = "_spikard"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[dependencies]
axum = { default-features = false, version = "0.8" }
pyo3 = { version = "0.29" }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spikard = { version = "0.17.0-rc.4", path = "../spikard", features = ["di"] }
spikard-core = { path = "../spikard-core", version = "0.17.0-rc.4" }
spikard-graphql = { path = "../spikard-graphql", version = "0.17.0-rc.4" }
spikard-http = { path = "../spikard-http", version = "0.17.0-rc.4" }
tokio = { features = ["full"], version = "1" }
