[build-system]
build-backend = "maturin"
requires = [ "maturin>=1,<2" ]

[project]
name = "spikard-bindings"
version = "0.1.0"
description = "Python bindings for spikard (internal use)"
license = { text = "MIT" }
authors = [ { name = "Na'aman Hirschfeld", email = "nhirschfeld@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
]

[tool.maturin]
module-name = "_spikard"
features = [ "pyo3/extension-module" ]
