[build-system]
build-backend = "maturin"
requires = [ "maturin>=1,<2" ]

[project]
name = "spikard"
version = "0.2.0"
description = "Fast, type-safe web framework with Rust-powered Python bindings"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Na'aman Hirschfeld", email = "nhirschfeld@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
]

[tool.maturin]
module-name = "_spikard"
features = [ "extension-module" ]
python-source = "packages/python"
