[package]
name = "spikard-rb-macros"
version = "0.12.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]
