[package]
name = "spikard-rb-macros"
version = "0.13.0"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
