[package]
name = "spikard-rb"
version = "0.2.5"
edition = "2024"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
homepage = "https://github.com/Goldziher/spikard"
description = "High-performance Ruby bindings for Spikard HTTP framework via Magnus"
keywords = ["ruby", "bindings", "magnus", "http", "framework"]
categories = ["api-bindings", "web-programming::http-server"]
documentation = "https://docs.rs/spikard-rb"
readme = "README.md"
build = "build.rs"

[lib]
name = "spikard_rb_core"

[dependencies]
magnus = { git = "https://github.com/matsadler/magnus", rev = "f6db11769efb517427bf7f121f9c32e18b059b38", features = ["rb-sys"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spikard-core = { path = "../spikard-core", features = ["di"] }
spikard-http = { path = "../spikard-http", features = ["di"] }
spikard-bindings-shared = { path = "../spikard-bindings-shared" }
axum = { workspace = true }
axum-test = "18"
bytes = "1.11"
cookie = "0.18"
tokio = { workspace = true }
tracing = "0.1"
serde_qs = "0.15"
urlencoding = "2.1"
once_cell = "1.21"
async-stream = "0.3"
http = { workspace = true }

[features]
default = ["di"]
di = ["spikard-core/di", "spikard-http/di"]

[build-dependencies]
rb-sys-build = "0.9"
