[package]
name = "spikard-rb"
version.workspace = true
edition.workspace = true
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/spikard"
homepage = "https://github.com/Goldziher/spikard"
description = "High-performance Ruby bindings for Spikard HTTP framework via Magnus"
keywords = ["ruby", "bindings", "magnus", "http", "framework"]
categories = ["api-bindings", "web-programming::http-server"]
documentation = "https://docs.rs/spikard-rb"
readme = "README.md"
build = "build.rs"

[package.metadata.cargo-machete]
ignored = ["futures-util", "serde", "serde_qs", "spikard-rb-macros", "urlencoding"]

[lib]
name = "spikard_rb_core"

[features]
default = ["di"]
di = ["spikard-core/di", "spikard-http/di"]

[dependencies]
async-stream = "0.3"
axum = { workspace = true }
axum-test = "20"
bytes = "1.11"
cookie = "0.18"
futures = "0.3"
futures-util = "0.3"
http = { workspace = true }
magnus = { version = "0.8.2", features = ["rb-sys", "embed"] }
once_cell = "1.21"
paste = "1.0.15"
rb-sys = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "1.1"
spikard-bindings-shared = { path = "../spikard-bindings-shared" }
spikard-core = { path = "../spikard-core", features = ["di"] }
spikard-http = { path = "../spikard-http", features = ["di"] }
spikard-rb-macros = { path = "../spikard-rb-macros" }
tokio = { workspace = true }
tonic = { version = "0.14", features = ["transport", "codegen", "gzip"] }
tracing = "0.1"
tungstenite = "0.29"
url = "2.5"
urlencoding = "2.1"

[build-dependencies]
rb-sys-build = "0.9"

[lints]
workspace = true
