[package]
name = "spikard-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASIp3 HTTP component for Spikard framework"
keywords = ["wasm", "wasi", "http", "component", "framework"]
categories = ["web-programming::http-server", "wasm"]
documentation = "https://docs.rs/spikard-wasm"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
spikard-core = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2.5"
percent-encoding = "2.3"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "macros", "std"] }
bytes = "1.11"
http-body-util = "0.1"
wasip3 = { version = "0.4", features = ["http-compat"] }
wit-bindgen = "0.51"
