[package]
name = "spikard-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Wasm-safe surface of spikard — JSON Schema validation and RFC 7807 problem details for browsers and edge runtimes"
keywords = ["http", "wasm", "json-schema", "validation", "rfc7807"]
categories = ["wasm", "web-programming"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
http = { workspace = true }
serde_json = "1"
spikard-core = { path = "../spikard-core", default-features = false }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true
