[package]
name = "spikard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for spikard"

[lib]
name = "spikard"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
anyhow = "1.0"

[dev-dependencies]
