[package]
name = "spikard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for spikard"

[lib]
name = "spikard"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum.workspace = true
axum-test = "18"
schemars = { version = "1.1", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
spikard-http = { path = "../spikard-http" }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tower = { workspace = true, features = ["util"] }
