[package]
name = "spikard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance HTTP framework built on Axum and Tower-HTTP with type-safe routing, validation, WebSocket/SSE support, and lifecycle hooks"
keywords = ["http", "web", "framework", "axum", "tower", "web-framework", "api", "rest"]
categories = ["web-programming::http-server", "web-programming::http-client"]
documentation = "https://docs.rs/spikard"
readme = "README.md"

[lib]
name = "spikard"
path = "src/lib.rs"

[features]
default = []
di = ["spikard-http/di", "spikard-core/di"]

[dependencies]
anyhow = "1.0"
axum.workspace = true
axum-test = "18"
base64 = "0.22"
bytes = "1.11"
schemars = { version = "1.1", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
spikard-http = { version = "0.1.0", path = "../spikard-http" }
spikard-core = { version = "0.2.0", path = "../spikard-core", optional = true }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tower = { workspace = true, features = ["util"] }
