[workspace]

[package]
name = "spikard-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spikard-e2e-app = { path = "./app" }
axum = "0.8"
tower = "0.5"
percent-encoding = "2.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
