[package]
name = "spikard-e2e-app"
version = "0.7.1"
edition = "2024"
publish = false

# Opt out of parent workspace
[workspace]

[lib]
name = "spikard_e2e_app"
path = "src/lib.rs"

[[bin]]
name = "spikard-e2e-app"
path = "src/main.rs"

[dependencies]
spikard = { path = "../../crates/spikard" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
percent-encoding = "2.3"
bytes = "1.7"
futures = "0.3"
axum-test = "18"
uuid = "1"
