[package]
name = "di-example"
version = "0.15.0"
edition = "2024"
publish = false

[package.metadata.cargo-machete]
ignored = ["serde_json"]

[[bin]]
name = "rust_basic"
path = "rust_basic.rs"

[dependencies]
axum = "0.8"
serde_json = "1.0"
spikard-core = { path = "../../crates/spikard-core", features = ["di"] }
spikard-http = { path = "../../crates/spikard-http", features = ["di"] }
tokio = { version = "1", features = ["full"] }
