[package]
name = "rust-lifecycle-hooks-example"
version = "0.3.4"
edition = "2024"

# This is a standalone example, not part of the workspace
[workspace]

[dependencies]
spikard-http = { path = "../../crates/spikard-http" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
