[package]
name = "rust-lifecycle-hooks-example"
version = "0.14.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["serde"]

# This is a standalone example, not part of the workspace
[workspace]

[dependencies]
axum = "0.8"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spikard-http = { path = "../../crates/spikard-http" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
