[workspace]

[package]
name = "app-generator"
version = "0.6.2"
edition = "2024"

[[bin]]
name = "app-generator"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
glob = "0.3"
indexmap = { version = "2", features = ["serde"] }
handlebars = "6"

[dev-dependencies]
tempfile = "3"
