[package]
name = "snippet-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "snippet-runner"
path = "src/main.rs"

[lib]
name = "snippet_runner"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile = "3.27"
rayon = "1.11"
toml = "0.9"
walkdir = "2.5"
which = "8"
