[package]
name = "snippet-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "snippet_runner"
path = "src/lib.rs"

[[bin]]
name = "snippet-runner"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rayon = "1.12"
serde.workspace = true
serde_json.workspace = true
tempfile = "3.27"
thiserror.workspace = true
toml = "1.1"
walkdir = "2.5"
which = "8"

[lints]
workspace = true
