[package]
name = "test-generator"
version = "0.10.1"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "gen-tests"
path = "src/main.rs"

[dependencies]
spikard-codegen = { path = "../../crates/spikard-codegen" }
spikard-cli = { path = "../../crates/spikard-cli" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.11"
regex = "1.12"
cookie = "0.18"
urlencoding = "2.1"
heck = "0.5"
base64 = "0.22"
