[project]
name = "spikard-test-app"
version = "0.1.0"
description = "E2E test app for published Spikard Python package"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "spikard==0.6.1", # Exact version pin - updated by scripts/update-versions.sh
]

optional-dependencies.dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [ "." ]
python_files = [ "test_*.py" ]
python_functions = [ "test_*" ]
