[project]
name = "spikard-test-app"
version = "0.1.0"
description = "E2E test app for published Spikard Python package"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "spikard @ file:///Users/naamanhirschfeld/workspace/spikard/packages/python",
]
optional-dependencies.dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
py-modules = [ "app", "test_published" ]

[tool.pytest]
ini_options.asyncio_mode = "auto"
ini_options.testpaths = [ "." ]
ini_options.python_files = [ "test_*.py" ]
ini_options.python_functions = [ "test_*" ]
